# PoolManagementKidneyExchangePrograms

./: .gitignore  README.md  pyproject.toml
data/12_year_simulation/: arcs_1.txt  arcs_10.txt  arcs_100.txt  arcs_11.txt  arcs_12.txt  arcs_13.txt  arcs_14.txt  arcs_15.txt  arcs_16.txt  arcs_17.txt  arcs_18.txt  arcs_19.txt  arcs_2.txt  arcs_20.txt  arcs_21.txt  arcs_22.txt  arcs_23.txt  arcs_24.txt  arcs_25.txt  arcs_26.txt  arcs_27.txt  arcs_28.txt  arcs_29.txt  arcs_3.txt  arcs_30.txt  arcs_31.txt  arcs_32.txt  arcs_33.txt  arcs_34.txt  arcs_35.txt  arcs_36.txt  arcs_37.txt  arcs_38.txt  arcs_39.txt  arcs_4.txt  arcs_40.txt  arcs_41.txt  arcs_42.txt  arcs_43.txt  arcs_44.txt  (+60 more)
data/6_year_simulation/: arcs_1.txt  arcs_10.txt  arcs_100.txt  arcs_11.txt  arcs_12.txt  arcs_13.txt  arcs_14.txt  arcs_15.txt  arcs_16.txt  arcs_17.txt  arcs_18.txt  arcs_19.txt  arcs_2.txt  arcs_20.txt  arcs_21.txt  arcs_22.txt  arcs_23.txt  arcs_24.txt  arcs_25.txt  arcs_26.txt  arcs_27.txt  arcs_28.txt  arcs_29.txt  arcs_3.txt  arcs_30.txt  arcs_31.txt  arcs_32.txt  arcs_33.txt  arcs_34.txt  arcs_35.txt  arcs_36.txt  arcs_37.txt  arcs_38.txt  arcs_39.txt  (+66 more)
scripts/: plot_results.py  process_results.py  run_generate.py  run_generate_acceptance_variations.py  run_kep.py
tests/: conftest.py  test_cycle_finder.py  test_digraph.py  test_generate.py  test_generate_acceptance_variations.py  test_policy_kep_hier_no_wt.py  test_policy_kep_hier_with_wt.py  test_policy_kep_max_cardinality.py  test_policy_kep_static.py  test_simulator.py  test_simulator_static.py  test_utils.py  test_utils_solver.py
(+1530 files in other folders)
